# poseidon

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: grain.rs  lib.rs  matrix.rs  merkle.rs  permutation.rs  poseidon.rs  spec.rs  transcript.rs
src/poseidon/: constant.rs  merkle.rs  variable.rs
